return user on signup/login & update swagger
